Fix image on mobile

--- a/content/stylesheets/pages/_post.scss
+++ b/content/stylesheets/pages/_post.scss
@@ -121,7 +121,9 @@
 
   img {
     width: auto;
-    height: 550px;
+    height: 100%;
+    max-height: 550px;
+    max-width: 80vw;
     border-radius: 1rem;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.05),
                 0 0 2rem rgba(0, 0, 0, 0.1);
